packages/csharp/src/Kreuzberg/runtimes/osx-arm64/native/include/kreuzberg.h


typedef struct KREUZBERGContentFilterConfig KREUZBERGContentFilterConfig;
typedef struct KREUZBERGDiffOptions KREUZBERGDiffOptions;
typedef struct KREUZBERGEmbeddingConfig KREUZBERGEmbeddingConfig;
typedef struct KREUZBERGEmbeddingPreset KREUZBERGEmbeddingPreset;
typedef struct KREUZBERGExtractionConfig KREUZBERGExtractionConfig;
typedef struct KREUZBERGExtractionDiff KREUZBERGExtractionDiff;
typedef struct KREUZBERGExtractionResult KREUZBERGExtractionResult;
typedef struct KREUZBERGHtmlOutputConfig KREUZBERGHtmlOutputConfig;
typedef struct KREUZBERGImageExtractionConfig KREUZBERGImageExtractionConfig;
typedef struct KREUZBERGKeywordConfig KREUZBERGKeywordConfig;
typedef struct KREUZBERGLanguageDetectionConfig KREUZBERGLanguageDetectionConfig;
typedef struct KREUZBERGLayoutDetectionConfig KREUZBERGLayoutDetectionConfig;
typedef struct KREUZBERGLlmConfig KREUZBERGLlmConfig;
typedef struct KREUZBERGOcrConfig KREUZBERGOcrConfig;
typedef struct KREUZBERGOcrQualityThresholds KREUZBERGOcrQualityThresholds;
typedef struct KREUZBERGPageClassificationConfig KREUZBERGPageClassificationConfig;
typedef struct KREUZBERGPageConfig KREUZBERGPageConfig;
typedef struct KREUZBERGPdfConfig KREUZBERGPdfConfig;
typedef struct KREUZBERGRedactionConfig KREUZBERGRedactionConfig;
typedef struct KREUZBERGRerankerConfig KREUZBERGRerankerConfig;
typedef struct KREUZBERGRerankerPreset KREUZBERGRerankerPreset;
typedef struct KREUZBERGTokenReductionOptions KREUZBERGTokenReductionOptions;
typedef struct KREUZBERGTranslationConfig KREUZBERGTranslationConfig;
KREUZBERGContentFilterConfig *kreuzberg_content_filter_config_default(void);
KREUZBERGExtractionConfig *kreuzberg_extraction_config_default(void);
int32_t kreuzberg_extraction_config_needs_image_data(const KREUZBERGExtractionConfig *this_);
int32_t kreuzberg_extraction_config_needs_image_processing(const KREUZBERGExtractionConfig *this_);
KREUZBERGImageExtractionConfig *kreuzberg_image_extraction_config_default(void);
KREUZBERGTokenReductionOptions *kreuzberg_token_reduction_options_default(void);
KREUZBERGLanguageDetectionConfig *kreuzberg_language_detection_config_default(void);
KREUZBERGHtmlOutputConfig *kreuzberg_html_output_config_default(void);
KREUZBERGLayoutDetectionConfig *kreuzberg_layout_detection_config_default(void);
KREUZBERGOcrQualityThresholds *kreuzberg_ocr_quality_thresholds_default(void);
KREUZBERGOcrConfig *kreuzberg_ocr_config_default(void);
KREUZBERGPageConfig *kreuzberg_page_config_default(void);
KREUZBERGPdfConfig *kreuzberg_pdf_config_default(void);
KREUZBERGExtractionResult *kreuzberg_extract_file(const char *path,
                                                  const char *mime_type,
                                                  const KREUZBERGExtractionConfig *config);
KREUZBERGExtractionResult *kreuzberg_extract_file_sync(const char *path,
                                                       const char *mime_type,
                                                       const KREUZBERGExtractionConfig *config);
KREUZBERGExtractionResult *kreuzberg_extract_bytes_sync(const uint8_t *content,
                                                        uintptr_t content_len,
                                                        const char *mime_type,
                                                        const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_files_sync(const char *items,
                                         const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_bytes_sync(const char *items,
                                         const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_files(const char *items,
                                    const KREUZBERGExtractionConfig *config);
char *kreuzberg_batch_extract_bytes(const char *items,
                                    const KREUZBERGExtractionConfig *config);
char *kreuzberg_detect_mime_type_from_bytes(const uint8_t *content,
                                            uintptr_t content_len);
char *kreuzberg_get_extensions_for_mime(const char *mime_type);
char *kreuzberg_list_supported_formats(void);
char *kreuzberg_detect_qr_codes(const uint8_t *image_bytes,
                                uintptr_t image_bytes_len,
                                const char *_format_hint);
char *kreuzberg_list_embedding_backends(void);
char *kreuzberg_list_document_extractors(void);
char *kreuzberg_list_ocr_backends(void);
int32_t kreuzberg_register_builtin(void);
char *kreuzberg_list_post_processors(void);
char *kreuzberg_list_renderers(void);
char *kreuzberg_list_reranker_backends(void);
char *kreuzberg_list_validators(void);
int32_t kreuzberg_classify_pages(KREUZBERGExtractionResult *result,
                                 const KREUZBERGPageClassificationConfig *config);
char *kreuzberg_classify_text(const char *text,
                              const KREUZBERGPageClassificationConfig *config);
char *kreuzberg_download_model(const char *name,
                               const char *cache_dir);
char *kreuzberg_default_model_name(void);
char *kreuzberg_known_models(void);
int32_t kreuzberg_redact(KREUZBERGExtractionResult *result,
                         const KREUZBERGRedactionConfig *config);
char *kreuzberg_summarize(const char *text,
                          const char *language,
                          uint32_t max_tokens);
uint32_t kreuzberg_token_count(const char *text);
int32_t kreuzberg_translate_result(KREUZBERGExtractionResult *result,
                                   const KREUZBERGTranslationConfig *config);
KREUZBERGExtractionDiff *kreuzberg_compare(const KREUZBERGExtractionResult *a,
                                           const KREUZBERGExtractionResult *b,
                                           const KREUZBERGDiffOptions *opts);
char *kreuzberg_extract_region_with_vlm(const uint8_t *image_bytes,
                                        uintptr_t image_bytes_len,
                                        const char *image_mime,
                                        int32_t region_kind,
                                        const KREUZBERGLlmConfig *llm_config,
                                        const char *custom_prompt);
char *kreuzberg_extract_keywords(const char *text,
                                 const KREUZBERGKeywordConfig *config);
int32_t kreuzberg_render_pdf_page_to_png(const uint8_t *pdf_bytes,
                                         uintptr_t pdf_bytes_len,
                                         uintptr_t page_index,
                                         int32_t dpi,
                                         const char *password,
                                         uint8_t **out_ptr,
                                         uintptr_t *out_len,
                                         uintptr_t *out_cap);
char *kreuzberg_detect_mime_type(const char *path,
                                 int32_t check_exists);
char *kreuzberg_embed_texts_async(const char *_texts,
                                  const KREUZBERGEmbeddingConfig *_config);
KREUZBERGEmbeddingPreset *kreuzberg_get_embedding_preset(const char *name);
char *kreuzberg_list_embedding_presets(void);
char *kreuzberg_rerank(const char *query,
                       const char *documents,
                       const KREUZBERGRerankerConfig *config);
char *kreuzberg_rerank_async(const char *_query,
                             const char *_documents,
                             const KREUZBERGRerankerConfig *_config);
KREUZBERGRerankerPreset *kreuzberg_get_reranker_preset(const char *name);
char *kreuzberg_list_reranker_presets(void);