packages/csharp/src/Kreuzberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_file")]
    internal static extern IntPtr ExtractFile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string mimeType,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_file_sync")]
    internal static extern IntPtr ExtractFileSync(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string mimeType,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_bytes_sync")]
    internal static extern IntPtr ExtractBytesSync(
        IntPtr content,
        UIntPtr contentLen,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string mimeType,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_files_sync")]
    internal static extern IntPtr BatchExtractFilesSync(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_bytes_sync")]
    internal static extern IntPtr BatchExtractBytesSync(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_files")]
    internal static extern IntPtr BatchExtractFiles(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_extract_bytes")]
    internal static extern IntPtr BatchExtractBytes(
        IntPtr items,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_mime_type_from_bytes")]
    internal static extern IntPtr DetectMimeTypeFromBytes(
        IntPtr content,
        UIntPtr contentLen
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_get_extensions_for_mime")]
    internal static extern IntPtr GetExtensionsForMime(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string mimeType
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_supported_formats")]
    internal static extern IntPtr ListSupportedFormats();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_qr_codes")]
    internal static extern IntPtr DetectQrCodes(
        IntPtr imageBytes,
        UIntPtr imageBytesLen,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string formatHint
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_embedding_backends")]
    internal static extern IntPtr ListEmbeddingBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_document_extractors")]
    internal static extern IntPtr ListDocumentExtractors();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_ocr_backends")]
    internal static extern IntPtr ListOcrBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_register_builtin")]
    internal static extern void RegisterBuiltin();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_post_processors")]
    internal static extern IntPtr ListPostProcessors();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_renderers")]
    internal static extern IntPtr ListRenderers();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_reranker_backends")]
    internal static extern IntPtr ListRerankerBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_validators")]
    internal static extern IntPtr ListValidators();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_classify_pages")]
    internal static extern void ClassifyPages(
        IntPtr result,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_classify_text")]
    internal static extern IntPtr ClassifyText(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_download_model")]
    internal static extern IntPtr DownloadModel(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string cacheDir
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_default_model_name")]
    internal static extern IntPtr DefaultModelName();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_known_models")]
    internal static extern IntPtr KnownModels();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_redact")]
    internal static extern void Redact(
        IntPtr result,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_summarize")]
    internal static extern IntPtr Summarize(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string language,
        uint maxTokens
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_token_count")]
    internal static extern uint TokenCount(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_translate_result")]
    internal static extern void TranslateResult(
        IntPtr result,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_compare")]
    internal static extern IntPtr Compare(
        IntPtr a,
        IntPtr b,
        IntPtr opts
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_region_with_vlm")]
    internal static extern IntPtr ExtractRegionWithVlm(
        IntPtr imageBytes,
        UIntPtr imageBytesLen,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string imageMime,
        IntPtr regionKind,
        IntPtr llmConfig,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string customPrompt
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_keywords")]
    internal static extern IntPtr ExtractKeywords(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_render_pdf_page_to_png")]
    internal static extern int RenderPdfPageToPng(
        IntPtr pdfBytes,
        UIntPtr pdfBytesLen,
        ulong pageIndex,
        int dpi,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out IntPtr outPtr,
        out UIntPtr outLen,
        out UIntPtr outCap
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_mime_type")]
    internal static extern IntPtr DetectMimeType(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        [MarshalAs(UnmanagedType.U1)] bool checkExists
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_embed_texts_async")]
    internal static extern IntPtr EmbedTextsAsync(
        IntPtr texts,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_get_embedding_preset")]
    internal static extern IntPtr GetEmbeddingPreset(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_embedding_presets")]
    internal static extern IntPtr ListEmbeddingPresets();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_rerank")]
    internal static extern IntPtr Rerank(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
        IntPtr documents,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_rerank_async")]
    internal static extern IntPtr RerankAsync(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
        IntPtr documents,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_get_reranker_preset")]
    internal static extern IntPtr GetRerankerPreset(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_reranker_presets")]
    internal static extern IntPtr ListRerankerPresets();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_content_filter_config_default")]
    internal static extern IntPtr ContentFilterConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extraction_config_default")]
    internal static extern IntPtr ExtractionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extraction_config_needs_image_data")]
    internal static extern int ExtractionConfigNeedsImageData(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extraction_config_needs_image_processing")]
    internal static extern int ExtractionConfigNeedsImageProcessing(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_image_extraction_config_default")]
    internal static extern IntPtr ImageExtractionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_token_reduction_options_default")]
    internal static extern IntPtr TokenReductionOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_language_detection_config_default")]
    internal static extern IntPtr LanguageDetectionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_html_output_config_default")]
    internal static extern IntPtr HtmlOutputConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_layout_detection_config_default")]
    internal static extern IntPtr LayoutDetectionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_ocr_quality_thresholds_default")]
    internal static extern IntPtr OcrQualityThresholdsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_ocr_config_default")]
    internal static extern IntPtr OcrConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_page_config_default")]
    internal static extern IntPtr PageConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_pdf_config_default")]
    internal static extern IntPtr PdfConfigDefault();
